--- a/package.json
+++ b/package.json
@@ -1,48 +1,40 @@
 {
   "name": "vuecomponentt1",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.umd.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/main.d.ts",
-  "type": "module",
+  "version": "1.0.1",
+  "description": "一个基于Vue3的组件库",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "unpkg": "dist/index.umd.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "test": "node 123",
-    "clean": "rimraf ./dist",
-    "build:esm": "rollup -c rollup.config.esm.js",
-    "build:umd": "rollup -c rollup.config.umd.js",
-    "build": "pnpm clean && pnpm build:esm && pnpm build:umd && pnpm build:types",
-    "build:watch": "rollup -c rollup.config.esm.js -w",
-    "build:types": "vue-tsc --declaration --emitDeclarationOnly --outDir dist/types",
-    "prepublishOnly": "pnpm test && pnpm build"
+    "dev": "vite",
+    "build": "rm -rf dist && npm run build:es && npm run build:cjs && npm run build:umd",
+    "build:es": "vite build --config vite.config.es.ts",
+    "build:cjs": "vite build --config vite.config.cjs.ts",
+    "build:umd": "vite build --config vite.config.umd.ts",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "vue",
+    "vue3",
+    "components",
+    "typescript"
+  ],
   "dependencies": {
-    "rollup-plugin-css-only": "^4.5.2"
+    "vue": "^3.5.16"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^5.1.1",
-    "@rollup/plugin-commonjs": "^28.0.3",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@vue/compiler-sfc": "^3.5.16",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.4",
-    "rimraf": "^6.0.1",
-    "rollup": "^4.41.1",
-    "rollup-plugin-postcss": "^4.0.2",
-    "typescript": "^5.8.3",
-    "unplugin-vue": "^6.2.0",
+    "@types/node": "^22.10.0",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "typescript": "^5.6.0",
     "vite": "^6.3.5",
-    "vue-tsc": "^2.2.10"
+    "vite-plugin-dts": "^4.4.0",
+    "vue-tsc": "^2.1.0"
   },
   "peerDependencies": {
-    "vue": "^3.5.16"
+    "vue": "^3.5.0"
   }
 }
